# case-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  app.json  as.py  docker-compose.yml  heroku.yml  manage.py  package.json  postdeploy.sh  pyproject.toml  release.sh
app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  netlify.toml  package.json
app/public/: index.html  manifest.json  serviceworker.js
app/src/: App.css  App.tsx  api.ts  auth.ts  components.tsx  countries.ts  i18n.ts  index.css  index.tsx  routes.tsx  serviceWorker.ts  theme.ts  types.ts  utils.ts
assets/js/: case_management.js
case_management/: admin.py  apps.py  auth.py  context_processors.py  enums.py  forms.py  managers.py  models.py  queries.py  serializers.py  settings.py  test.py  urls.py  views.py  wsgi.py
case_management/dashboard/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
case_management/fixtures/: demo-data.json  dev_all.json
case_management/migrations/: 0001_initial.py  0002_auto_20210630_2118.py  0002_auto_20210706_2226.py  0002_client.py  0003_case.py  0003_meeting_meeting_type.py  0004_auto_20210817_1157.py  0004_case_clients.py  0005_auto_20210628_1356.py  0005_user_case_office.py  0006_auto_20210901_0737.py  0007_alter_user_membership_number.py  0008_caseoffice_case_office_code.py  0009_auto_20211001_1328.py  0010_legalcase_summary.py  0011_log.py  0012_log_parent_type.py  0013_legalcasefile.py  0014_auto_20211028_1527.py  0014_auto_20211028_2057.py  (+55 more)
dashboard/: .env.example  .gitignore  package.json
(+140 files in other folders)
