[tool.black]
target-version = ['py38']
exclude = 'case_management/migrations/*'
skip-string-normalization = true

[tool.poetry]
name = "case_management"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.24"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
werkzeug = "^3.0.1"
whitenoise = "^5.2.0"
sentry-sdk = "^1.14.0"
django-extensions = "^3.0.9"
pytest-cov = "^2.10.1"
html5lib = "^1.1"
codecov = "^2.1.13"
gunicorn = "^20.0.4"
djangorestframework = "^3.12.1"
gevent = "^23.9.1"
django-cors-headers = "^3.7.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^5.2.0"}
uritemplate = "^3.0.1"
PyYAML = "^5.4.1"
drf-yasg = "^1.20.0"
django-filter = "^2.4.0"
django-lifecycle = "^0.9.1"
botocore = "^1.21.61"
boto3 = "^1.18.61"
django-storages = "^1.12.1"
django-countries = "^7.2.1"
django-naomi = "^0.8"
django-ckeditor = "6.7.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
